[package]
name = "couic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
displaythis  = "1.0.23"
thiserror    = "1.0.57"
crossterm    = "0.27.0"
ratatui      = "0.26.1"
tui-textarea = { version = "0.4.0", features = ["search"] }
tui-prompts  = "0.3.5"
lazy_static  = "1.4.0"
regex        = "1.10.3"
clipboard    = "0.5.0"
